public/stylesheets/style.css
* {
  margin:0;
  padding:0;
}

body.win {font-family:Arial, sans-serif !important;}

body {
  background:url(/images/background.gif);
  color:#d3d3d3;
  font-family: "proxima-nova-1","proxima-nova-2", Helvetica, Arial, sans-serif;
  font-weight:200;
  font-size:16px;
  text-shadow:1px 1px 0 #000;
}

#global {
  width:880px;
  padding:0 40px;
  margin:0 auto;
}

#header {
  position:relative;
}

#halo {
  width:520px;
  height:310px;
  background:url(/images/white_halo.png) no-repeat;
  position:absolute;
  top:-90px;
  left:-120px;
}

#header h1 {
  position:relative;
}

#header h1 a {
  display:block;
  width:294px;
  height:93px;
  background:url(/images/mintt.png) no-repeat;
  margin:45px 0 45px;
}

#header h1 a span, #header h2 {display:none;}

#menu {
  position:absolute;
  top:25px;
  right:0;
  list-style-type:none;
}

#menu li {
  float:left; 
  padding:0 0 0 30px;
}

#menu li a {
  display:block;
  padding:10px 20px;
  background:#111;
  font-size:20px;
  font-weight:400;
  color:#777;
  text-shadow:none;
  -webkit-border-radius:50px;
  -moz-border-radius:50px;
}

#menu li.active a, #menu li a:hover {
  color:#fff;
  text-shadow:none;
}

#menu li.home a {
  width:33px;
  height:31px;
  background:url(/images/home_icon.png);
  padding:0;
  margin-top:4px;
  -webkit-border-radius:0;
  -moz-border-radius:0;
}

#menu li.home a span {display:none;}

#content {
  position:relative;
  width:600px;
  float:left;
}

h2.headline {
  font-size:30px;
  font-weight:200;
  font-style:italic;
  line-height:44px;
  padding:0 0 10px;
}

.text {
  line-height:28px;
  padding:0 0 10px;
/*  text-align:justify;*/
}

.text h3 {
  font-size:28px;
  font-weight:200;
  padding:0 0 10px;
}

.text h4 {
  font-size:22px;
  padding:10px 0 0;
}

.text p {
  padding:4px 0;
}

#content .text strong {
  font-weight:bold;
}

#sidebar {
  width:230px;
  padding:0 0 0 50px;
  float:left;
  line-height:24px;
  font-size:13px;
}

#sidebar h3 {
  font-size:28px;
  font-weight:200;
  padding:0 0 10px;
}

#sidebar .box {
  padding:10px 0 10px;
}

a#registration_button {
  display:block;
  width:230px;
  height:38px;
  background:url(/images/register_button.png) no-repeat;
}

a#registration_button:active {background-position:0 -38px;}

a#registration_button span {display:none;}

#sidebar h4 {
  padding:10px 0 0;
  font-size:16px;
}

#sidebar p {
  padding:0 0 10px;
}

#sidebar ul {
  list-style-type:none;
/*  padding:10px 0 0;*/
}

#sidebar li {
  padding:0 0 5px 15px;
  background:url(/images/dot.png) no-repeat 0 7px;
  line-height:20px;
}

#sidebar ul.entities {
  margin:5px 0 0;
/*  background:#111;
  border: 1px solid #000;
  -webkit-border-radius:8px;
  -moz-border-radius:8px;
*/}

#sidebar ul.entities li {
  padding:0;
  background:none;
  display:block;
  font-size:15px;
/*  border-top:1px solid #222;
  border-bottom:1px solid #000;
*/}

#sidebar ul.entities li.first {
  line-height:0;
  border-top:none;
}

#sidebar ul.entities li.last {
  border-bottom:none;
}

#sidebar ul.entities li a {
  display:block;
  padding:10px 0 8px;
/*  color:#fff;*/
  font-weight:500;
}

#sidebar ul.entities li a em {
  color:#666;
  font-style:normal;
  text-shadow:none;
}

#modules {
  list-style-type:none;
}

#modules li {
  padding:0 0 24px;
  width:600px;
}

#modules li .top {
  height:8px;
  background:url(/images/module_box_top.png) no-repeat;
}

#modules li .wrap {
  background:url(/images/module_box_repeat.png) repeat-y;
}

#modules li .back {
  background:url(/images/module_box_gradient.png) no-repeat;
  min-height:189px;
}

#modules li .bottom {
  height:8px;
  background:url(/images/module_box_bottom.png) no-repeat;
}

#modules li .left {
  float:left;
  width:126px;
  text-align:right;
}

#modules li .right {
  float:left;
  width:473px;
}

#modules li .left img {
  margin:5px 12px 0 0;
  border:1px solid #000;
}

#modules li .left h4 {
  font-size:12px;
  font-weight:400;
  padding:0 13px;
/*  color:#c;*/
}

#modules li .left h4 em {
  display:block;
  color:#777;
}

#modules li .left a.bio {
  display:block;
  width:37px;
  height:17px;
  float:right;
  margin:5px 13px 0 0;
  background:url(/images/bio_button.png) no-repeat;
}

#modules li .left a.bio:active {background-position:0 -17px;}

#modules li .left a.bio span {display:none;}

#modules li .right h3 {
  padding:2px 15px;
  font-weight:400;
}

#modules li .right h3 strong {
  color:#9dc925;
}

#modules li .right .desc {
  padding:5px 15px;
  font-size:14px;
  line-height:24px;
}

form.main {
  position:relative;
}

form.main ol {
  list-style-type:none;
}

form.main fieldset {
  border:none;
}

form.main abbr {
  color:#c3ff00;
  border:none;
  font-size:18px;
  font-weight:bold;
}

form.main .string label, form.main .text label {
  display:block;
  padding:12px 0 2px;
  line-height:18px;
}

form.main .string input, form.main textarea {
  background:#bbb;
  border:none;
  width:590px;
  font-size:15px;
  padding:3px;
  border:2px solid #888;
  -webkit-transition:background 0.2s;
}

form.main textarea {
  margin-bottom:-9px;
  height:200px;
  resize:vertical;
}

form.main .string input:focus, form.main textarea:focus {
  background:#fff;
  border:2px solid #666;
  outline-color:#c3ff00;
}

form.main li.radio li label {
  float:left;
  padding:10px 20px 10px 0;
}

form.main li.date li label {display:none;}
form.main li.date ol {margin:15px 0;}
form.main li.date li {display:inline;}

form.main li.boolean input {
  margin:0 10px 0 0;
}

form.main li.commit {
  padding:30px 0;
}

form.main p.inline-errors {
  background:#e77700;
  line-height:18px;
  padding:3px 6px;
  color:#fff;
  font-weight:500;
  text-shadow:none;
  border:2px solid #a45500;
}

form.main .required_mention {
  position:absolute;
  bottom:25px;
  right:0;
}

#footer {
  padding:30px 0;
  text-align:center;
  font-size:12px;
}

#flash {
  padding:40px 20px;
  text-align:center;
  background:#a5ce37;
  color:#304703;
  text-shadow:none;
  font-weight:bold;
  font-size:30px;
  border-bottom: 1px solid #000;
}

.spacer {clear:both;}

a {
  text-decoration:none;
  color:#a6ce39;
  outline:0;
  -webkit-transition:0.3s text-shadow;
  -webkit-transition:0.3s color;
}

a:hover {
  text-shadow:#a6ce39 0 0 5px;
  color:#fff;
}

img {
  border:none;
}

#footnotes_debug {
  background:#000 !important;
  margin:0 !important;
  padding:20px 0;
  width:100%;
  font-weight:bold;
  color:#999 !important;
  text-shadow:none !important;
}

#footnotes_debug span {background:#444 !important;}

#footnotes_debug a {color:#ccc !important;}

